# polyventure

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.secrets/: signed_contract_trust_store.json
assets/legal/: NOTICE.md
docs/: WAGER_HEDGE_MODELS.md
docs/compliance/: POLYVENTURE_KALSHI_LIVE_LANE_COMPLIANCE_REVIEW_2026-06-14.md  POLYVENTURE_KALSHI_MODE_PLAN_COMPLIANCE_REVIEW_2026-05-08.md
tests/: conftest.py  test_audit_production_boundary.py  test_auth.py  test_candidate_persistence_uniform_contract.py  test_candidate_surface_ssot.py  test_candidates_panel_contract.py  test_catchup_order.py  test_cli.py  test_config.py  test_console_session_teardown_security.py  test_demo_integration.py  test_demo_soak.py  test_dynamic_sizing_persistence.py  test_eligibility_state_machine_w6.py  test_entry_window_evidence.py  test_execution.py  test_flow_evidence.py  test_header_layout_w7.py  test_http_client.py  test_kalshi_units.py  test_key_websocket_clear_contract.py  test_lane_default_invariant.py  test_lane_default_provenance.py  test_order_sandbox.py  test_pair_liquidity_observation.py  test_parameter_optimizers.py  test_partition_and_lifecycle_w1_w2_w3.py  test_persistence.py  test_popup.py  test_risk.py  test_rotation.py  test_run_response_projection_r2.py  test_sandbox_preflight.py  test_service.py  test_signed_contract_adversarial.py  test_signed_evidence.py  test_soak.py  test_strategy.py  test_submit_order_in_flight_parity.py  test_transition_contract_audit.py  (+5 more)
(+37 files in other folders)
